<resources>
    <string name="app_name">ExpiryDateReminder</string>
    <string name="categories">Categories</string>
    <string name="profile">About</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="food">Food</string>
    <string name="medicine">Medicine</string>
    <string name="skincare">Skincare</string>
    <string name="frequently_asked_questions">Frequently Asked \nQuestions</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="profile_name">Ditha Nurcahya Avianty</string>
    <string name="name">Name</string>
    <string name="profile_email">dithanurcahya55@gmail.com</string>
    <string name="email">E-mail</string>
    <string name="expiration_date_reminder">Expiration Date Reminder</string>
</resources>