<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:background="@drawable/bg_1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/profile" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/profile_name" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/profile_email" />


    </LinearLayout>


</LinearLayout>