<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="18dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="16dp"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date_reminder"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="2"
        android:padding="14dp"
        app:alignmentMode="alignMargins"
        android:layout_marginTop="120dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/img_list"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:srcCompat="@drawable/ic_baseline_list_24" />

                <TextView
                    android:text="@string/categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/img_profile"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"/>

                <TextView
                    android:text="@string/profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/img_faq"
                    app:srcCompat="@drawable/ic_baseline_question_answer_24"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"/>

                <TextView
                    android:text="@string/faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:srcCompat="@drawable/ic_baseline_settings_24" />

                <TextView
                    android:text="@string/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>